k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: service-nodejs
  namespace: microservices
    
spec:
  type: NodePort
  selector:
    app: nodejs
  ports:
    - port: 80
      targetPort: 8081
      nodePort: 30001


---

kind: Service
apiVersion: v1
metadata:
  name: service-java
  namespace: microservices

spec:
  type: NodePort
  selector:
    app: java
  ports:
    - port: 80
      targetPort: 8082
      nodePort: 30002


---

kind: Service
apiVersion: v1
metadata:
  name: service-python
  namespace: microservices

spec:
  type: NodePort
  selector:
    app: python
  ports:
    - port: 80
      targetPort: 8083
      nodePort: 30003
