k8s/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: microservices-ingress
  namespace: microservices
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
   
spec:
  ingressClassName: nginx
  rules:
    - host: thesahilsuman.online
      http:
        paths:
        - path: /nodejs
          pathType: Prefix
          backend:
            service:
              name: service-nodejs
              port: 
                number: 80

        - path: /java
          pathType: Prefix
          backend:
            service:
              name: service-java
              port: 
                number: 80
         
        - path: /python
          pathType: Prefix
          backend:
            service:
              name: service-python
              port: 
                number: 80
    
    - host: java.thesahilsuman.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-java
                port:
                  number: 80
